--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "<your database connection string>"
+    "MyDbConnection": "Server=tcp:<katalogbuku>.database.windows.net,1433;Database=<katalogbuku>;User ID=<katalogbuku>;Password=<Ishaqq98>;Encrypt=true;Connection Timeout=30;"
   }
 }
